mdapi-source/original-package/unpackaged/objects/WorkData__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusOfWork__c</fullName>
        <label>StatusOfWork</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WorkData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>StatusOfWork__c</columns>
        <columns>UserId__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WD-{0000}</displayFormat>
        <label>WorkData Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>